# crabclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IDEA.md  README.md
.agent/: teams.md  workflow.md
.agents/workflows/: smoke-test.md  workflow.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: architecture.md  architecture.zh-CN.md
docs/adr/: 0001-cli-only-vs-library-plus-cli-CN.md  0001-cli-only-vs-library-plus-cli.md
docs/plans/: bub-alignment-backlog-CN.md  bub-alignment-backlog.md  completed-slices.md  s0-project-skeleton-CN.md  s0-project-skeleton.md  s1-request-pipeline-CN.md  s1-request-pipeline.md  s10-fileops-streaming-anthropic-CN.md  s10-fileops-streaming-anthropic.md  s2-command-routing-tape-CN.md  s2-command-routing-tape.md  s3-repl-multiturn-CN.md  s3-repl-multiturn.md  s4-tool-skill-registry-CN.md  s4-tool-skill-registry.md  s5-telegram-channel-CN.md  s5-telegram-channel.md  s6-anthropic-adapter-CN.md  (+7 more)
scripts/: smoke-test.sh
src/: api_types.rs  channel.rs  channel_manager.rs  cli.rs  client.rs  command.rs  config.rs  context.rs  error.rs  input.rs  lib.rs  main.rs  repl.rs  router.rs  skills.rs  tape.rs  telegram.rs  tools.rs
tests/: agent_loop_integration.rs  agent_loop_routing_integration.rs  agent_loop_tooling_integration.rs  cli_run.rs  live_integration.rs  openai_provider_integration.rs  schedule_tools_integration.rs  telegram_integration.rs  telegram_markdown_integration.rs  telegram_provider_integration.rs  telegram_routing_integration.rs  telegram_tools_integration.rs  web_tools_integration.rs
(+39 files in other folders)
