[package]
name = "crabclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3.18.0"
