[package]
name = "crabclaw"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1"
rustyline = "15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.13", features = ["macros"] }
thiserror = "2.0.12"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
    "time",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
serial_test = "3.4.0"
tempfile = "3.18.0"
